Nome de imagem está errado bug

--- a/Views/Pessoas/Index.cshtml
+++ b/Views/Pessoas/Index.cshtml
@@ -30,6 +30,10 @@
             <td>
                 @Html.DisplayFor(modelItem => item.Foto)
             </td>
+
+            <td>
+               <img src="@Url.Content(item.Foto)" width="200" height="200" />
+            </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.PessoaId">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.PessoaId">Details</a> |
