--- a/Views/Pessoas/Details.cshtml
+++ b/Views/Pessoas/Details.cshtml
@@ -20,7 +20,7 @@
             @Html.DisplayNameFor(model => model.Foto)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Foto)
+           <img src="@Url.Content(Model.Foto)" width="200" height="200" />
         </dd>
     </dl>
 </div>
